--- a/exp_1.ipynb
+++ b/exp_1.ipynb
@@ -1438,7 +1438,7 @@
       "Epoch 77/200\n",
       "\u001b[1m23/23\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 324ms/step - accuracy: 0.5513 - loss: 1.1077 - val_accuracy: 0.5831 - val_loss: 1.0568\n",
       "Epoch 78/200\n",
-      "\u001b[1m 1/23\u001b[0m \u001b[37m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m7s\u001b[0m 341ms/step - accuracy: 0.5547 - loss: 1.1043"
+      "\u001b[1m17/23\u001b[0m \u001b[32m━━━━━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━\u001b[0m \u001b[1m1s\u001b[0m 279ms/step - accuracy: 0.5735 - loss: 1.0698"
      ]
     }
    ],
