write EDA section

--- a/exp_1.ipynb
+++ b/exp_1.ipynb
@@ -1271,9 +1271,12 @@
     "1. 비정상적인 훈련 history 발생: 훈련 도중 적합에 장애 발생 후 극복\n",
     "2. 데이터 EDA 필요\n",
     "\n",
-    "#### 1.233 basic_3 모델에 EDA 데이터 적재\n",
+    "## 1.2 데이터 EDA\n",
     "\n",
-    "민들레 클래스를 민들레 홀씨와 민들레 꽃으로 분리"
+    "1. 민들레 클래스를 민들레 홀씨와 민들레 꽃으로 분리: 지나친 매니폴드 보간에 의한 오분류 방지\n",
+    "2. 기타 학습에 저해되는 요소를 포함한 데이터포인트 제거\n",
+    "\n",
+    "### 1.21 EDA 데이터를 사용해 basic_3 모델 학습습"
    ]
   },
   {
@@ -1512,9 +1515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.3 EfficientNet V2L 모델 설정 및 학습\n",
-    "\n",
-    "1. "
+    "#### 1.22 EfficientNet V2L 모델 설정 및 학습"
    ]
   },
   {
